--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -8,3 +8,9 @@
   object-fit: cover;
   object-position: 50% 50%;
 }
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .cover__background {
+    height: 62.5vw;
+  }
+}
