--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,6 +4,8 @@
   font-weight: 400;
   text-align: right;
   margin-left: 18px;
+  color: inherit;
+  text-decoration: none;
 }
 
 .header__lang-link:hover {
