--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,6 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 58px auto 1.15vh;
+  margin: 58px auto 92px;
   width: 76.875vw;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .lead {
+    margin: 50px auto 92px;
+    width: 90.625vw;
+  }
 }
