--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -2,5 +2,11 @@
   width: 190px;
   height: 44px;
   background-image: url(../../images/logo.svg);
-  margin-right: calc(56.25vw - 18px);
+  margin-right: calc(76.875vw - 264px);
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .logo {
+    margin-right: calc(90.625vw - 264px);
+  }
 }
