--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,7 +5,7 @@
   justify-content: start;
   flex-wrap: wrap;
   text-align: left;
-  margin-bottom: 10vh;
+  margin-bottom: 80px;
 }
 
 .place:last-of-type {
