--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
   width: 92.5vw;
   height: 92.5vh;
-  margin: 11.5vh auto 0;
+  margin: 92px auto 0;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -14,4 +14,11 @@
   background-position: center;
   color: inherit;
   text-decoration: none;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .cover {
+    width: 100vw;
+    height: 62.5vw;
+  }
 }
