--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,16 @@
 .footer {
   width: 92.5vw;
-  padding: 11.5vh 0 3vh;
+  padding: 92px 48px 24px 48px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: start;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .footer {
+    width: 90.625vw;
+    margin: 0 auto 0 0;
+    padding: 92px auto 24px 48px;
+  }
 }
