--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,4 +1,10 @@
 .intro {
-  width: 53.91%;
-  margin: 11.5vh 34.53vw 11.5vh 11.5625vw;
+  width: 690px;
+  margin: 92px auto 92px 11.5625vw;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .intro {
+    margin: 92px auto 92px 4.6875vw;
+  }
 }
