--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,8 +5,8 @@
   text-align: left;
   margin-block-start: 0;
   margin-block-end: 0;
-  width: 14.22vw;
-  height: 1.75vh;
+  width: 182px;
+  height: 14px;
   align-self: flex-start;
   margin-top: 8px;
 }
