--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,6 +4,7 @@
   font-weight: 900;
   margin-block-start: 0;
   margin-block-end: 0;
-  width: 56.25vw;
+  width: 720px;
   text-align: center;
   }
+
