--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,6 +7,16 @@
   grid-template-columns: repeat(4, auto);
   grid-template-rows: repeat(3, auto);
   width: 92.5vw;
-  margin: 11.5vh auto;
+  margin: 92px auto;
   list-style: none;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .photo-grid {
+    grid-gap: 14px;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(4, auto);
+    width: 90.625vw;
+    margin: 92px auto;
+  }
 }
