--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,5 +7,11 @@
   font-size: 72px;
   line-height: calc(1em + 4px);
   font-weight: 900;
-  margin: 0 3.125vw 3.75vw 0;
+  margin: 0 3.125vw 48px 0;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .place__title {
+    width: 42.9688vw;
+  }
 }
