--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,8 +1,7 @@
 .place__website {
-  width: 35.625vw;
+  width: 456px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding-bottom: 48px;
-  padding-left: .5vw;
 }
