--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -14,3 +14,10 @@
     height: 62.5vw;
   }
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .cover__background {
+    width: 100vw;
+    height: 62.5vw;
+  }
+}
