--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -20,3 +20,10 @@
     height: 62.5vw;
   }
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .cover__overlay {
+    width: 100vw;
+    height: 62.5vw;
+  }
+}
