--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,3 +10,9 @@
   align-self: flex-start;
   margin-top: 8px;
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
