--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -13,3 +13,10 @@
     width: 90.625vw;
   }
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .lead {
+    margin: 50px 0 88px;
+    width: 100vw;
+  }
+}
