--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,3 +5,10 @@
   justify-content: flex-end;
   padding-bottom: 48px;
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .place__website {
+    width: 40vw;
+    max-width: 456px;
+  }
+}
