--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,5 +12,17 @@
 }
 
 .footer__link:last-of-type {
-  margin-right: calc(90.625vw - 376px);
+  margin-right: calc(92.5vw - 376px);
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+  .footer__link:last-of-type {
+    margin-right: calc(90.625vw - 376px);
+  }
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .footer__link:last-of-type {
+    margin-right: calc(93.75vw - 376px);
+  }
 }
