--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,3 +14,10 @@
     padding: 92px auto 24px 48px;
   }
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .footer {
+    width: 93.75vw;
+    padding: 88px 0 24px ;
+  }
+}
