--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -8,3 +8,10 @@
     margin: 92px auto 92px 4.6875vw;
   }
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .intro {
+    width: 90vw;
+    margin: 88px auto;
+  }
+}
