--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,3 +8,9 @@
   margin-block-end: 0;
   margin: 32px auto 8vh;
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .lead__subtitle {
+    margin: 32px auto 56px;
+  }
+}
