--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -16,3 +16,11 @@
     margin-left: 24px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    margin-left: 16px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+}
