--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -30,3 +30,13 @@
     margin: 88px auto;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    grid-gap: 12px;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(12, auto);
+    width: 90vw;
+    margin: 64px auto;
+  }
+}
