--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,6 +1,6 @@
 .cover__background {
   width: 100%;
-  height: 92.5vh;
+  height: 57.82vw;
   z-index: 0;
   position: absolute;
   top: 0;
@@ -9,15 +9,10 @@
   object-position: 50% 50%;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-  .cover__background {
-    height: 62.5vw;
-  }
-}
-
-@media screen and (max-width: 1023px) and (min-width: 768px) {
+@media screen and (max-width: 1279px)  {
   .cover__background {
     width: 100vw;
     height: 62.5vw;
   }
 }
+
