--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,6 @@
 .cover__overlay {
   width: 92.5vw;
-  height: 92.5vh;
+  height: 57.82vw;
   z-index: 1;
   position: absolute;
   top: 0;
@@ -14,16 +14,10 @@
   opacity: .8;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .cover__overlay {
     width: 100vw;
     height: 62.5vw;
   }
 }
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .cover__overlay {
-    width: 100vw;
-    height: 62.5vw;
-  }
-}
