--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,3 +2,11 @@
   margin-block-start: 0;
   margin-block-end: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1;
+    font-weight: 400;
+  }
+}
