--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -26,3 +26,14 @@
     margin-right: calc(93.75vw - 376px);
   }
 }
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    margin-bottom: 32px;
+    font-size: 24px;
+    line-height: 1;
+  }
+  .footer__link:last-of-type {
+    margin-bottom: 48px;
+  }
+}
