--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -11,3 +11,11 @@
 .header__lang-link:hover {
   text-decoration: underline;
 }
+
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: calc(1em+2px);
+    font-weight: 400;
+  }
+}
