--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,9 @@
 .header {
   width: 76.875vw;
+  height: max-content;
   margin: 0 auto;
   display: flex;
+  align-items: center;
 }
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
