--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,3 +5,9 @@
   font-weight: 900;
 }
 
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: calc(1em + 5px);
+  }
+}
