--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,5 +6,13 @@
   margin-block-end: 0;
   width: 720px;
   text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 1.1;
+    width: 288px;
   }
+}
 
