--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -3,10 +3,26 @@
   height: 44px;
   background-image: url(../../images/logo.svg);
   margin-right: calc(76.875vw - 264px);
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
   .logo {
     margin-right: calc(90.625vw - 264px);
+  }
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .logo {
+    margin-right: calc(93.75vw - 264px);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .logo {
+    width: 156px;
+    /* height: 36px; */
+    margin-right: calc(90vw - 235px);
   }
 }
