--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -28,3 +28,13 @@
     line-height: 1.625;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .place__paragraph {
+    width: 90vw;
+    font-size: 16px;
+    line-height: 1.255;
+    font-weight: 400;
+    margin: 0 auto 25px
+  }
+}
