--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,3 +11,10 @@
 .place:last-of-type {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .place {
+    flex-direction: column;
+    margin-bottom: 48px;
+  }
+}
