--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,6 +4,9 @@
   width: 76.875vw;
   margin: 0 auto;
   list-style: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
 }
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
@@ -14,6 +17,13 @@
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .places {
-    width: 90vw;
+    width: 90.625vw;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places {
+    width: 100vw;
+    margin: 0;
   }
 }
