--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -15,7 +15,7 @@
 @media screen and (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: calc(1em+2px);
+    line-height: 1.11;
     font-weight: 400;
   }
 }
