--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -15,6 +15,6 @@
 @media screen and (max-width: 767px) {
   .cover__title {
     font-size: 32px;
-    line-height: calc(1em +3px);
+    line-height: 1.09;
   }
 }
