--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,6 +8,6 @@
 @media screen and (max-width: 767px) {
   .intro__title {
     font-size: 32px;
-    line-height: calc(1em + 5px);
+    line-height: 1.09;
   }
 }
