--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,35 +1,20 @@
 .place__title {
   margin-block-start: 0;
   margin-block-end: 0;
-  display: inline;
-  width: 35.9375vw;
-  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   font-size: 72px;
-  line-height: calc(1em + 4px);
+  line-height: 1.06;
   font-weight: 900;
-  margin: 0 3.125vw 48px 0;
-  text-align: left;
+  grid-column: 1;
+  grid-row: 1;
 }
-
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-  .place__title {
-    width: 42.9688vw;
-  }
-}
-
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .place__title {
-    width: 44.27vw;
-    font-size: 42px;
-    margin: 0 28px 48px 0;
-  }
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .place__title {
     width: 90vw;
+    margin: 0 auto;
     font-size: 32px;
     line-height: 1.09;
-    margin: 0 auto 30px;
   }
 }
