--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -9,7 +9,7 @@
   object-position: 50% 50%;
 }
 
-@media screen and (max-width: 1279px)  {
+@media screen and (max-width: 1279px) and (min-width: 320px)  {
   .cover__background {
     width: 100vw;
     height: 62.5vw;
