--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -14,9 +14,9 @@
   opacity: .8;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1279px) and (min-width: 320px) {
   .cover__overlay {
-    width: 100vw;
+    width: 100%;
     height: 62.5vw;
   }
 }
