--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -10,10 +10,11 @@
   z-index: 2;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.14;
     margin-bottom: 16px;
+    width: 90%;
   }
 }
