--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -16,9 +16,10 @@
   text-decoration: none;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1279px) and (min-width: 320px) {
   .cover {
-    width: 100vw;
+    width: 100%;
     height: 62.5vw;
+    margin: 92px 0 0;
   }
 }
