--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,8 +3,9 @@
   margin-block-end: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .footer__copyright {
+    margin-left: 16px;
     font-size: 14px;
     line-height: 1;
     font-weight: 400;
