--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -27,9 +27,10 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .footer__link {
     margin-bottom: 32px;
+    margin-left: 16px;
     font-size: 24px;
     line-height: 1;
   }
