--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 92.5vw;
-  padding: 92px 48px 24px 48px;
+  padding: 92px 0 24px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -10,7 +10,7 @@
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
   .footer {
     width: 90.625vw;
-    margin: 0 auto 0 0;
+    margin: 0 auto;
     padding: 92px auto 24px 48px;
   }
 }
@@ -22,7 +22,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .footer {
     flex-direction: column;
     width: 51.6vw;
