--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -18,7 +18,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .header {
     width: 90vw;
   }
