--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,12 +1,17 @@
 .intro__title {
+  margin-block-start: 0;
+  margin-block-end: 0;
   width: 100%;
   font-size: 54px;
   line-height: 1.07;
   font-weight: 900;
+  margin-bottom: 40px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) and (min-width: 320px) {
   .intro__title {
+    width: 80vw;
+    margin: 64px auto 40px 0;
     font-size: 32px;
     line-height: 1.09;
   }
