--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,5 @@
-.intro {
-  width: 690px;
+ .intro {
+  max-width: 690px;
   margin: 92px auto 92px 11.5625vw;
 }
 
@@ -11,15 +11,15 @@
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .intro {
-    width: 90vw;
+    width: 90%;
+    max-width: 720px;
     margin: 88px auto;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .intro {
-    width: 90vw;
+    width: 90%;
     margin: 64px auto;
   }
 }
-
