--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,11 +11,11 @@
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .lead__subtitle {
-    margin: 32px auto 56px;
+    margin: 32px 0 56px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .lead__subtitle {
     width: 288px;
     font-size: 16px;
