--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -17,12 +17,13 @@
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .lead {
     margin: 50px 0 88px;
-    width: 100vw;
+    width: 100%;
   }
 }
 
-@media screen and (max-width: 767px) {  .lead {
-  margin: 50px 0 64px;
-  width: 100vw;
-}
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .lead {
+    margin: 50px 0 64px;
+    width: 100%;
+  }
 }
