--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -19,7 +19,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .logo {
     width: 156px;
     margin-right: calc(90vw - 235px);
