--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,12 +1,8 @@
 .page {
-  font-family: 'Inter', sans-serif;
+  font-family: Inter, Arial, sans-serif;
   font-size: 16px;
   background: #2A2C2F;
   color: #FFFFFF;
   -webkit-font-smoothing: antialiased;
   padding-top: 34px;
-}
-
-@media screen and (max-width: 424px) {
-  .page {padding-top: 20px;}
 }
