--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,4 @@
-.place__image {
+/* .place__image {
   width: 35.9375vw;
   height: 35.9375vw;
   margin-right: 3.125vw;
@@ -21,10 +21,27 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .place__image {
-    width: 100vw;
+    width: 100%;
     height: 100vw;
     margin: 0 0 32px;
+  }
+} */
+
+.place__image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: 50% 50%;
+  grid-column: 1;
+  grid-row: 2;
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .place__image {
+    width: 100%;
+    grid-column: 1;
+    grid-row: 3;
   }
 }
