--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,11 +1,13 @@
 .place__paragraph {
   margin-block-start: 0;
   margin-block-end: 0;
-  width: 35.625vw;
+  margin-bottom: 25px;
+  width: 100%;
   font-size: 18px;
   line-height: 1.63;
   font-weight: 400;
-  margin-bottom: 25px;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .place__paragraph:last-of-type {
@@ -13,28 +15,14 @@
   line-height: 1.44;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-  .place__paragraph {
-    width: 44.53vw;
-  }
-}
-
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .place__paragraph {
-    font-size: 16px;
-  }
-
-  .place__paragraph:last-of-type {
-    line-height: 1.625;
-  }
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .place__paragraph {
     width: 90vw;
+    margin: 0 auto 25px;
     font-size: 16px;
     line-height: 1.255;
     font-weight: 400;
-    margin: 0 auto 25px;
+    grid-column: 1;
+    grid-row: 4;
   }
 }
