--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,21 +1,18 @@
 .place__website {
-  width: 456px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding-bottom: 48px;
+  grid-column: 2;
+  grid-row: 1;
 }
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .place__website {
-    width: 40vw;
-    max-width: 456px;
-  }
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .place__website {
     width: 90vw;
-    margin: 0 auto 12px;
+    margin: 0 auto;
+    grid-column: 1;
+    grid-row: 2;
   }
 }
+
+
