--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -21,9 +21,9 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
   .places {
-    width: 100vw;
+    width: 100%;
     margin: 0;
   }
 }
