--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,15 +1,15 @@
 .footer {
-  width: 92.5vw;
+  width: 92.5%;
   padding: 92px 0 24px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
   .footer {
-    width: 90.625vw;
+    width: 90.625%;
     margin: 0 auto;
     padding: 92px auto 24px 48px;
   }
@@ -17,7 +17,7 @@
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .footer {
-    width: 93.75vw;
+    width: 93.75%;
     padding: 88px 0 24px;
   }
 }
