--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,23 +1,16 @@
 .cover__overlay {
-  width: 92.5vw;
-  height: 57.82vw;
+  width: 100%;
+  height: 100%;
   z-index: 1;
   position: absolute;
-  top: 0;
-  left: 0;
+  background-color: #2A2C2F;
   opacity: .3;
-  object-fit: cover;
-  object-position: 50% 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cover:hover .cover__overlay {
   opacity: .8;
 }
-
-@media screen and (max-width: 1279px) and (min-width: 320px) {
-  .cover__overlay {
-    width: 100%;
-    height: 62.5vw;
-  }
-}
-
