--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,25 +1,36 @@
 .cover {
-  width: 92.5vw;
-  height: 57.82vw;
+  width: 92.5%;
   margin: 92px auto 0;
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: unset;
   align-items: center;
   z-index: 5;
-  background-image: url(../../images/__background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   color: inherit;
   text-decoration: none;
 }
+/* .cover {
+  width: 92.5%;
+  height: auto;
+  margin: 92px auto 0;
+  position: relative;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  /* z-index: 5; */
+  /* background-image: url(../../images/__background.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; */
+  /* color: inherit;
+  text-decoration: none;
+} */
 
-@media screen and (max-width: 1279px) and (min-width: 320px) {
+ @media screen and (max-width: 1279px) and (min-width: 320px) {
   .cover {
     width: 100%;
-    height: 62.5vw;
     margin: 92px 0 0;
   }
 }
