--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -10,6 +10,7 @@
 
 .header__lang-link:hover {
   text-decoration: underline;
+  opacity: .8;
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
