--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,13 +4,13 @@
   justify-content: center;
   align-items: center;
   margin: 58px auto 92px;
-  width: 76.875vw;
+  width: 76.875%;
 }
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
   .lead {
     margin: 50px auto 92px;
-    width: 90.625vw;
+    width: 90.625%;
   }
 }
 
