--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,7 +6,7 @@
   grid-gap: 16px;
   grid-template-columns: repeat(4, auto);
   grid-template-rows: repeat(3, auto);
-  width: 92.5vw;
+  width: 92.5%;
   margin: 92px auto;
   list-style: none;
 }
@@ -16,7 +16,7 @@
     grid-gap: 14px;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(4, auto);
-    width: 90.625vw;
+    width: 90.625%;
     margin: 92px auto;
   }
 }
@@ -26,7 +26,7 @@
     grid-gap: 16px;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(6, auto);
-    width: 90vw;
+    width: 90%;
     margin: 88px auto;
   }
 }
@@ -36,7 +36,7 @@
     grid-gap: 12px;
     grid-template-columns: auto;
     grid-template-rows: repeat(12, auto);
-    width: 90vw;
+    width: 90%;
     margin: 64px auto;
   }
 }
