--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,39 +1,8 @@
-/* .place__image {
-  width: 35.9375vw;
-  height: 35.9375vw;
-  margin-right: 3.125vw;
-  object-fit: cover;
-  object-position: 50% 50%;
-}
-
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-  .place__image {
-    width: 42.9688vw;
-    height: 42.9688vw;
-  }
-}
-
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .place__image {
-    width: 44.27vw;
-    height: 44.27vw;
-    margin-right: 28px;
-  }
-}
-
-@media screen and (max-width: 767px) and (min-width: 320px) {
-  .place__image {
-    width: 100%;
-    height: 100vw;
-    margin: 0 0 32px;
-  }
-} */
-
 .place__image {
   width: 100%;
   height: auto;
-  object-fit: cover;
-  object-position: 50% 50%;
+  /* object-fit: cover;
+  object-position: 50% 50%; */
   grid-column: 1;
   grid-row: 2;
 }
