--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,6 +3,7 @@
   margin-block-end: 0;
   margin-bottom: 25px;
   width: 100%;
+  max-width: 484px;
   font-size: 18px;
   line-height: 1.63;
   font-weight: 400;
