--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,7 @@
 .places {
   display: flex;
   flex-direction: column;
-  width: 76.875vw;
+  width: 76.875%;
   margin: 0 auto;
   list-style: none;
   margin-block-start: 0;
@@ -11,13 +11,13 @@
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
   .places {
-    width: 90.625vw;
+    width: 90.625%;
   }
 }
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .places {
-    width: 90.625vw;
+    width: 90.625%;
   }
 }
 
