--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -10,27 +10,17 @@
   color: inherit;
   text-decoration: none;
 }
-/* .cover {
-  width: 92.5%;
-  height: auto;
-  margin: 92px auto 0;
-  position: relative;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
-  /* z-index: 5; */
-  /* background-image: url(../../images/__background.jpg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center; */
-  /* color: inherit;
-  text-decoration: none;
-} */
 
- @media screen and (max-width: 1279px) and (min-width: 320px) {
+@media screen and (max-width: 1279px) and (min-width: 768px) {
   .cover {
     width: 100%;
-    margin: 92px 0 0;
+    margin: 86px 0 0;
+  }
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .cover {
+    width: 100%;
+    margin: 64px 0 0;
   }
 }
