--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,16 +1,21 @@
 .cover__subtitle {
   margin-block-start: 0;
   margin-block-end: 0;
-  width: 25%;
+  text-align: center;
   font-size: 18px;
   line-height: 1.22;
-  font-weight: 400;
+  font-weight: normal;
   z-index: 4;
+  font-family: inherit;
 }
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .cover__subtitle:first-of-type {
+  margin-top: 32px;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
   .cover__subtitle {
-     width: 42%;
+    padding-right: 10px;
   }
 }
 
@@ -18,6 +23,8 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.14;
-    margin-bottom: 16px;
+  }
+  .cover__subtitle:first-of-type {
+    margin-top: 16px;
   }
 }
