--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,13 @@
 .footer__copyright {
   margin-block-start: 0;
   margin-block-end: 0;
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: normal;
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .footer__copyright {
-    margin-left: 16px;
-    font-size: 14px;
     line-height: 1;
-    font-weight: 400;
   }
 }
