--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,26 +1,6 @@
 .header {
-  width: 76.875%;
-  height: max-content;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-  .header {
-    width: 90.625%;
-  }
-}
-
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .header {
-    width: 93.75%;
-  }
-}
-
-@media screen and (max-width: 767px) and (min-width: 320px) {
-  .header {
-    width: 90%;
-  }
-}
