--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,19 +1,36 @@
 .intro__text {
   margin-block-start: 0;
   margin-block-end: 0;
+  width: 70%;
+  font-weight: 400;
   font-size: 24px;
   line-height: 1.42;
-  font-weight: 400;
+}
+.intro__text:nth-of-type(2) {
+  text-align: right;
+  margin-top: 10px;
+  margin-bottom: 32px;
 }
 
-.intro__text:nth-of-type(2n) {
+
+.intro__text:nth-of-type(3) {
   font-size: 16px;
   line-height: 1.63;
-  margin: 32px 0 33px;
+  font-weight: normal;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 320px) {
+  .intro__text {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .intro__text {
-    line-height: 1.25;
+    line-height: 1.27;
+  }
+
+  .intro__text:nth-of-type(3) {
+    line-height: 1.65;
   }
 }
