--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,9 @@
 .lead__image {
   width: 100%;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .lead__image {
+    height: 58.4375vw;
+  }
+}
