--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,23 +1,23 @@
 .lead__subtitle {
-  width: 620px;
+  max-width: 720px;
   font-size: 30px;
   line-height: 1.2;
   font-weight: 400;
   text-align: center;
   margin-block-start: 0;
   margin-block-end: 0;
-  margin: 32px auto 8vh;
+  margin: 32px auto 64px;
 }
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) and (min-width: 768px) {
   .lead__subtitle {
-    margin: 32px 0 56px;
+    margin: 32px 0 40px;
   }
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .lead__subtitle {
-    width: 288px;
+    max-width: 288px;
     font-size: 16px;
     line-height: 1.25;
     margin: 16px auto 40px;
