--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,15 +4,25 @@
   font-weight: 900;
   margin-block-start: 0;
   margin-block-end: 0;
-  width: 720px;
+  max-width: 793px;
   text-align: center;
+  margin: 0;
+  padding-right: 23px;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .lead__title {
+    max-width: 720px;
+    padding-right: 0;
+  }
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .lead__title {
     font-size: 40px;
     line-height: 1.1;
-    width: 288px;
+    max-width: 288px;
+    padding-right: 0;
   }
 }
 
