--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,20 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 58px auto 92px;
+  margin: 7.1875% auto 7.4219%;
   width: 76.875%;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
+@media screen and (max-width: 1279px) and (min-width: 768px) {
   .lead {
-    margin: 50px auto 92px;
-    width: 90.625%;
-  }
-}
-
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .lead {
-    margin: 50px 0 88px;
+    margin: 88px auto 58px;
     width: 100%;
   }
 }
