--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,13 +1,11 @@
 .logo {
-  width: 190px;
-  height: 44px;
-  /* background-image: url(../../images/logo.svg); */
+  max-width: 271px;
   object-fit: contain;
   object-position: 50% 50%;
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .logo {
-    width: 156px;
+    max-width: 200px;
   }
 }
