--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,3 +8,9 @@
   max-width: 1280px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .page {
+    padding-top: 20px;
+  }
+}
