--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,38 +5,29 @@
   display: grid;
   grid-gap: 16px;
   grid-template-columns: repeat(4, auto);
-  grid-template-rows: repeat(3, auto);
+  grid-template-rows: repeat(2, auto);
   width: 92.5%;
-  margin: 92px auto;
+  margin: 118px auto 88px;
   list-style: none;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
+@media screen and (max-width: 1279px) and (min-width: 768px) {
   .photo-grid {
-    grid-gap: 14px;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(4, auto);
-    width: 90.625%;
-    margin: 92px auto;
+    width: 93.6%;
+    margin: 88px auto 94px;
+    grid-gap: 12px;
   }
 }
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .photo-grid {
-    grid-gap: 16px;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(6, auto);
-    width: 90%;
-    margin: 88px auto;
-  }
-}
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .photo-grid {
-    grid-gap: 12px;
+    grid-gap: 8px;
     grid-template-columns: auto;
-    grid-template-rows: repeat(12, auto);
+    grid-template-rows: repeat(8, auto);
     width: 90%;
-    margin: 64px auto;
+    margin: 86px auto 60px;
   }
 }
