--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,16 +1,12 @@
 .place__image {
   width: 100%;
   height: auto;
-  /* object-fit: cover;
-  object-position: 50% 50%; */
-  grid-column: 1;
-  grid-row: 2;
+  background-color: #C4C4C4;
+  grid-area: image;
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .place__image {
     width: 100%;
-    grid-column: 1;
-    grid-row: 3;
   }
 }
