--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,29 +1,30 @@
 .place__paragraph {
   margin-block-start: 0;
   margin-block-end: 0;
-  margin-bottom: 25px;
+  margin-bottom: 27px;
   width: 100%;
   max-width: 484px;
   font-size: 18px;
   line-height: 1.63;
-  font-weight: 400;
-  grid-column: 2;
-  grid-row: 2;
+  font-weight: normal;
 }
 
 .place__paragraph:last-of-type {
   margin-bottom: 0;
-  line-height: 1.44;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;
+    font-weight: 400;
+  }
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .place__paragraph {
-    width: 90vw;
-    margin: 0 auto 25px;
+    max-width: 90%;
+    margin: 0 auto 20px;
     font-size: 16px;
-    line-height: 1.255;
-    font-weight: 400;
-    grid-column: 1;
-    grid-row: 4;
+    line-height: 1.65;
   }
 }
