--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,9 +7,18 @@
   font-size: 72px;
   line-height: 1.06;
   font-weight: 900;
-  grid-column: 1;
-  grid-row: 1;
+  grid-area: title;
+  margin: 0 0 0 1px;
 }
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.095;
+    font-weight: 900;
+  }
+}
+
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .place__title {
     width: 90vw;
