--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -7,4 +7,8 @@
   display: block;
   color: #AAAAAA;
   letter-spacing: 2px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 0 6px 0;
+  letter-spacing: 1.44px;
 }
