--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,8 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  grid-column: 2;
-  grid-row: 1;
+  grid-area: author;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .place__website {
+    justify-content: flex-start;
+    /* padding-bottom: 20px; */
+  }
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
