--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,7 @@
 .places {
   display: flex;
-  flex-direction: column;
-  width: 76.875%;
+  flex-direction: column-reverse;
+  width: 77.11%;
   margin: 0 auto;
   list-style: none;
   margin-block-start: 0;
@@ -9,21 +9,15 @@
   padding-inline-start: 0;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-  .places {
-    width: 90.625%;
-  }
-}
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) and (min-width: 768px) {
   .places {
-    width: 90.625%;
+    width: 93.75%;
   }
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .places {
     width: 100%;
-    margin: 0;
   }
 }
