--- a/blocks/button/_place/blue-button_place_cover.css
+++ b/blocks/button/_place/blue-button_place_cover.css
@@ -1,15 +1,16 @@
 .blue-button_place_cover {
   margin-top: 33px;
   margin-right: 8px;
+  z-index: 5;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .blue-button_place_cover {
     margin-right: 12px;
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .blue-button_place_cover {
     margin-top: 19px;
     padding-left: 20px;
