--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,6 +1,7 @@
-.blue-button {
+.button {
   margin-block-start: 0;
   margin-block-end: 0;
+  font: inherit;
   background-color: #0278FE;
   height: max-content;
   font-size: 18px;
@@ -10,14 +11,17 @@
   padding: 13px 20px;
   border-radius: 4px;
   text-align: center;
+  color: white;
+  border: none;
+  cursor: pointer
 }
 
-.blue-button:hover {
+.button:hover {
   background-color: #0063D2;
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
-  .blue-button {
+@media screen and (max-width: 767px) {
+  .button {
     padding: 13px 40px;
   }
 }
