--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,22 +7,24 @@
   font-weight: normal;
   z-index: 4;
   font-family: inherit;
+  max-width: 220px;
 }
 
   .cover__subtitle:first-of-type {
   margin-top: 32px;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .cover__subtitle {
     padding-right: 10px;
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.14;
+    max-width: 170px;
   }
   .cover__subtitle:first-of-type {
     margin-top: 16px;
