--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,19 +6,11 @@
   line-height: 1.056;
   font-weight: 900;
   color: #FFFDFD;
-  margin-top: 20.7%;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
-  .cover__title {
-    margin-top: 32%;
-  }
-}
-
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .cover__title {
     font-size: 32px;
     line-height: 1.09;
-    margin-top: 14.5%;
   }
 }
