--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,15 +2,15 @@
   padding: 92px 43.594% 24px 43.515%;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .footer {
-    padding: 90px 302px 23px;
+    padding: 90px 39.3229% 23px;
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .footer {
     padding: 64px 0 24px 77px;
-    margin: 0;
+    margin: 0 calc((100% - 234px - 77px)/2);
   }
 }
