--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,19 +10,18 @@
   padding-right: 23px;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .lead__title {
     max-width: 720px;
     padding-right: 0;
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .lead__title {
     font-size: 40px;
     line-height: 1.1;
     max-width: 288px;
-    padding-right: 0;
   }
 }
 
