--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,7 +9,7 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .page {
     padding-top: 20px;
   }
