--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,29 +4,26 @@
   padding-inline-start: 0;
   display: grid;
   grid-gap: 16px;
-  grid-template-columns: repeat(4, auto);
-  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(auto-fit, minmax(23.98%,23.98%));
   width: 92.5%;
   margin: 118px auto 88px;
   list-style: none;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .photo-grid {
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(4, auto);
-    width: 93.6%;
+    grid-template-columns: repeat(auto-fit, minmax(49%, 49.1%));
+    width: 93.8%;
     margin: 88px auto 94px;
     grid-gap: 12px;
   }
 }
 
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .photo-grid {
     grid-gap: 8px;
-    grid-template-columns: auto;
-    grid-template-rows: repeat(8, auto);
+    grid-template-columns: repeat(auto-fit, minmax(100%,100%));
     width: 90%;
     margin: 86px auto 60px;
   }
