--- a/blocks/place/__button/place__button.css
+++ b/blocks/place/__button/place__button.css
@@ -1,13 +1,18 @@
 .place__button {
   grid-area: button;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: flex-start;
+  width: 54%;
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 1279px) {
   .place__button {
-    align-items: center;
+    width: 73%;
   }
- }
+}
+
+@media screen and (max-width: 767px) {
+  .place__button {
+    width: 90%;
+    margin: auto;
+    /* align-items: center; */
+  }
+}
