--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -13,18 +13,17 @@
   margin-bottom: 0;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .place__paragraph {
     font-size: 16px;
     font-weight: 400;
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__paragraph {
     max-width: 90%;
     margin: 0 auto 20px;
-    font-size: 16px;
     line-height: 1.65;
   }
 }
