--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,7 +11,7 @@
   margin: 0 0 0 1px;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .place__title {
     font-size: 42px;
     line-height: 1.095;
@@ -19,7 +19,7 @@
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__title {
     width: 90vw;
     margin: 0 auto;
