--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,19 +5,16 @@
   grid-area: author;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .place__website {
     justify-content: flex-start;
-    /* padding-bottom: 20px; */
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__website {
     width: 90vw;
     margin: 0 auto;
-    grid-column: 1;
-    grid-row: 2;
   }
 }
 
