--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -15,7 +15,7 @@
   margin-top: 0;
 }
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .place {
     grid-gap: 48px 28px;
     grid-template-columns: 1fr 1.03fr;
@@ -24,15 +24,10 @@
   .place:nth-of-type(1) {
     margin: 77px 0 0;
   }
-
-  .place:nth-of-type(3) {
-    margin: 77px 0 130px;
-  }
-
 }
 
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .place {
     grid-gap: 30px;
     grid-template-columns: 1fr;
