--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,13 +10,13 @@
 }
 
 
-@media screen and (max-width: 1279px) and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .places {
     width: 93.75%;
   }
 }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .places {
     width: 100%;
   }
