after 4-th review

--- a/blocks/place/__button/place__button.css
+++ b/blocks/place/__button/place__button.css
@@ -12,7 +12,6 @@
 @media screen and (max-width: 767px) {
   .place__button {
     width: 90%;
-    margin: auto;
-    /* align-items: center; */
+    margin: 0 5%;
   }
 }
