--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   width: 92.5%;
-  height: 57.8125vw;
+  min-height: 740px;
   margin: 92px auto 0;
   position: relative;
   display: flex;
@@ -19,14 +19,14 @@
 @media screen and (max-width: 1279px) {
   .cover {
     width: 100%;
-    height: 97.135vw;
+    min-height: 746px;
     margin: 86px 0 0;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover {
-    height: 79.375vw;
+    min-height: 254px;
     margin: 64px 0 0;
   }
 }
