--- a/pages/index.css
+++ b/pages/index.css
@@ -11,7 +11,7 @@
 @import url(../blocks/place/place.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/button/button.css);
-@import url(../blocks/boby/body.css);
+@import url(../blocks/body/body.css);
 
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -19,6 +19,7 @@
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__button/cover__button.css);
 @import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__form/cover__form.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
@@ -35,5 +36,3 @@
 @import url(../blocks/place/__website/place__website.css);
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__button/place__button.css);
-
-@import url(../blocks/button/_place/button_place_cover.css);
